--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,7 +1,7 @@
 html,
 body,
 #root,
-.main {
+.root {
   height: 100%;
 }
 
@@ -11,11 +11,20 @@ body,
 }
 
 .main {
-  min-height: 600px;
+  min-height: 500px;
   padding: 24px 32px;
   background: #fff;
 }
 
 .card:hover {
   box-shadow: none !important;
+}
+
+.ant-layout-has-sider > .ant-layout-sider {
+  float: left;
+  position: relative;
+}
+
+.ant-layout-content {
+  overflow: visible !important;
 }
